# noarr-structures

./: CMakeLists.txt  README.md
include/noarr/structures/: shortcuts.hpp  state.hpp  zcurve.hpp
include/noarr/structures/interop/: omp.hpp
tests/: cuda_test.cpp  cuda_test.cu  traverser_test.cpp
